--- a/src/main/java/com/mycompany/aps/Janela.form
+++ b/src/main/java/com/mycompany/aps/Janela.form
@@ -276,9 +276,10 @@
         <Component class="javax.swing.JComboBox" name="cbTipo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Fauna"/>
-                <StringItem index="1" value="Flora"/>
+              <StringArray count="3">
+                <StringItem index="0" value="Selecione"/>
+                <StringItem index="1" value="Fauna"/>
+                <StringItem index="2" value="Flora"/>
               </StringArray>
             </Property>
           </Properties>
@@ -294,11 +295,12 @@
         <Component class="javax.swing.JComboBox" name="cbGrupo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item1"/>
-                <StringItem index="1" value="Item2"/>
-                <StringItem index="2" value="Item3"/>
-                <StringItem index="3" value="Item4"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Selecione"/>
+                <StringItem index="1" value="Item1"/>
+                <StringItem index="2" value="Item2"/>
+                <StringItem index="3" value="Item3"/>
+                <StringItem index="4" value="Item4"/>
               </StringArray>
             </Property>
           </Properties>
@@ -309,9 +311,10 @@
         <Component class="javax.swing.JComboBox" name="cbFamilia">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Fauna"/>
-                <StringItem index="1" value="Flora"/>
+              <StringArray count="3">
+                <StringItem index="0" value="Selecione"/>
+                <StringItem index="1" value="Fauna"/>
+                <StringItem index="2" value="Flora"/>
               </StringArray>
             </Property>
           </Properties>
@@ -343,11 +346,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPesquisarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnLimpar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Limpar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblBioma">
           <Properties>
