--- a/src/main/java/com/mycompany/aps/Janela.form
+++ b/src/main/java/com/mycompany/aps/Janela.form
@@ -298,15 +298,26 @@
         <Component class="javax.swing.JComboBox" name="cbGrupo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
+              <StringArray count="13">
                 <StringItem index="0" value="Selecione"/>
-                <StringItem index="1" value="Item1"/>
-                <StringItem index="2" value="Item2"/>
-                <StringItem index="3" value="Item3"/>
-                <StringItem index="4" value="Item4"/>
+                <StringItem index="1" value="Anf&#xed;bios"/>
+                <StringItem index="2" value="Angiospermas"/>
+                <StringItem index="3" value="Aves"/>
+                <StringItem index="4" value="Bri&#xf3;fitas"/>
+                <StringItem index="5" value="Gimnospermas"/>
+                <StringItem index="6" value="Invertebrados Aqu&#xe1;ticos"/>
+                <StringItem index="7" value="Invertebrados Terrestres"/>
+                <StringItem index="8" value="Mam&#xed;feros"/>
+                <StringItem index="9" value="Peixes Continentais"/>
+                <StringItem index="10" value="Peixes Marinhos"/>
+                <StringItem index="11" value="Pterid&#xf3;fitas"/>
+                <StringItem index="12" value="R&#xe9;pteis"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbGrupoActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
